[package]
authors = ["oktk"]
name = "imphand"
publish = false
version = "0.1.0"

[[bin]]
name = "imphand"

[dependencies]
imap = "0.0.6"
libc = "0.2.18"
log = "0.3.8"
mailparse = "0.5.1"
notify-rust = "3.2.1"
openssl = "0.7.13"
regex = "0.2.0"
serde = "1.0.14"
serde_derive = "1.0.14"
toml = "0.4.5"
